SAR Blai Sandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Horario_adaptable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Horario adaptable a las necesidades del usuario y de sus familias</description>
        <inlineHelpText>Horario adaptable a las necesidades del usuario y de sus familias</inlineHelpText>
        <label>Horario adaptable (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horarios_libres_de_visita__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Horarios libres de visita y de recepción de llamadas</description>
        <inlineHelpText>Horarios libres de visita y de recepción de llamadas</inlineHelpText>
        <label>Horarios libres de visita (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdContacto_GCR__c</fullName>
        <label>IdContacto_GCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdGCR_TEMP__c</fullName>
        <label>IdGCR_TEMP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdGCR__c</fullName>
        <externalId>true</externalId>
        <label>IdGCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdNAV_CL__c</fullName>
        <label>IdNAV_CL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdNAV_RES__c</fullName>
        <label>IdNAV_RES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdNAV__c</fullName>
        <description>Identificador de Navision</description>
        <externalId>true</externalId>
        <label>IdNAV</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IdRecomendadora__c</fullName>
        <formula>Empresa_recomendadora__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IdRecomendadora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_T24__c</fullName>
        <externalId>true</externalId>
        <label>Id T24</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Informes_de_la_evolucion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Informes de la evolución del residente</description>
        <inlineHelpText>Informes de la evolución del residente</inlineHelpText>
        <label>Informes de la evolución (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnovacionAlimentariaDietasTexturiza__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Innovación alimentaria: dietas texturizadas.</description>
        <inlineHelpText>Innovación alimentaria: dietas texturizadas.</inlineHelpText>
        <label>Innovación aliment:dietas texturiza (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institucion_facturable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Institución facturable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integracion_Desactivada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integracion Desactivada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jardin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Jardín especialmente pensado para disfrutar del aire libre</description>
        <inlineHelpText>Jardín especialmente pensado para disfrutar del aire libre</inlineHelpText>
        <label>Jardín (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jardin_y_solarium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Jardín y solarium especialmente pensados para disfrutar del aire libre</description>
        <inlineHelpText>Jardín y solarium especialmente pensados para disfrutar del aire libre</inlineHelpText>
        <label>Jardín y solarium (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jardin_y_terrazas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Jardín y terrazas especialmente pensados para disfrutar del aire libre</description>
        <inlineHelpText>Jardín y terrazas especialmente pensados para disfrutar del aire libre</inlineHelpText>
        <label>Jardín y terrazas (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lavanderia_y_planchado__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Lavandería, planchado y repaso de ropa.</description>
        <inlineHelpText>Lavandería, planchado y repaso de ropa.</inlineHelpText>
        <label>Lavandería y planchado (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limpieza_diaria_de_la_habitacion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Limpieza diaria de la habitación (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Localizacion_Recomendadores__c</fullName>
        <formula>IMAGE( &apos;http://maps.googleapis.com/maps/api/staticmap?center=Barcelona,España&amp;zoom=13&amp;size=400x400&amp;markers=size:small|color:blue|Mallorca+200,Barcelona&amp;markers=color:green|label:A|Mallorca+100,Barcelona|Balmes+21,Barcelona&amp;markers=color:orange|label:B|Balmes+200,Barcelona&amp;markers=color:yellow|label:C|Mallorca+50,Barcelona&amp;markers=color:red|label:D|Buenos+Aires+45,Barcelona&amp;sensor=false&apos;, &apos;Mapa&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Localización Recomendadores</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localizacion__c</fullName>
        <label>Localización</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Localizacion_clientes__c</fullName>
        <formula>IMAGE( &apos;http://maps.googleapis.com/maps/api/staticmap?center=Barcelona,España&amp;zoom=13&amp;size=400x400&amp;markers=size:small|color:blue|Mallorca+200,Barcelona&amp;markers=color:green|label:C|Mallorca+100,Barcelona|Balmes+21,Barcelona|Balmes+200,Barcelona|Mallorca+50,Barcelona&amp;markers=color:red|label:P|Buenos+Aires+45,Barcelona&amp;sensor=false&apos;, &apos;Mapa&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Localización clientes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mallorca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mallorca</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medico_24h__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Médico 24h (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medico_propio__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Médico propio (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medios_para_financiar_la_estancia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medios para financiar la estancia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medios_transporte_publicos_cercanos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medios transporte públicos cercanos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Menu_degustacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menú degustación (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Menus_a_familiares__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Menús a familiares y menús de eventos familiares</description>
        <inlineHelpText>Menús a familiares y menús de eventos familiares</inlineHelpText>
        <label>Menús a familiares (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIF_director_centro__c</fullName>
        <label>NIF director centro</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_Plantas__c</fullName>
        <label>Nº Plantas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Plazas_CD_Privadas_del__c</fullName>
        <label>Nº Plazas CD Privadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Plazas_CD_Publicas_del__c</fullName>
        <label>Nº Plazas CD Públicas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Plazas_RD_Privada__c</fullName>
        <label>Nº Plazas RD Privada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Plazas_RD_Publicas__c</fullName>
        <label>Nº Plazas RD Públicas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_niveles__c</fullName>
        <label>Nº de niveles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Navarra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Navarra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negociacion_Precio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negociación Precio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_encuestar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No encuestar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_quiero_Recibir__c</fullName>
        <label>No quiero Recibir</label>
        <picklist>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas y Eventos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_tiene_correo_electronico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No tiene correo electrónico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_tiene_telefono__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No tiene teléfono</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nombre_Tablet_1__c</fullName>
        <label>Nombre Tablet 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_Tablet_2__c</fullName>
        <label>Nombre Tablet 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_Tablet_3__c</fullName>
        <label>Nombre Tablet 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Norte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Norte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nuermo_Documento_Sanitario__c</fullName>
        <label>Número Documento Sanitario</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obs_Rehabilitacion_Convalecencia__c</fullName>
        <label>Obs Rehabilitación/Convalecencia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obs_Unidad_Alzheimer_Demencias__c</fullName>
        <label>Obs Unidad Alzheimer/Demencias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_ATC__c</fullName>
        <label>Observaciones ATC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Animador_Socio_Cultural__c</fullName>
        <label>Observaciones Animador Socio Cultural</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Atencion_Telefonica__c</fullName>
        <label>Observaciones Atención Telefónica</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Atencion_Visita__c</fullName>
        <label>Observaciones Atención Visita</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Cocina_propia__c</fullName>
        <label>Observaciones Cocina propia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Fisoterapueta__c</fullName>
        <label>Observaciones Fisoterapueta</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Paleativos__c</fullName>
        <label>Observaciones Paleativos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Peluqueria__c</fullName>
        <label>Observaciones Peluquería</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Piscologia__c</fullName>
        <label>Observaciones Piscología</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Podologia__c</fullName>
        <label>Observaciones Podología</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Respiro__c</fullName>
        <label>Observaciones Respiro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Servicios_Medicos__c</fullName>
        <label>Observaciones Servicios Médicos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Terapeuta_Ocupacional__c</fullName>
        <label>Observaciones Terapeuta Ocupacional</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Trabajador_Social__c</fullName>
        <label>Observaciones Trabajador Social</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_Transtornos_Conductuales__c</fullName>
        <label>Observaciones Transtornos Conductuales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_enfermeria_24h__c</fullName>
        <label>Observaciones Enfermería 24h</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_estancia__c</fullName>
        <label>Observaciones estancia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_para_todos_los_servicios__c</fullName>
        <label>Observaciones para todos los servicios</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Observaciones_personales__c</fullName>
        <label>Observaciones Personales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_transporte__c</fullName>
        <label>Observaciones transporte</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oeste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oeste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orientacion_sobre_la_ley_de_dependencia__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Orientación sobre la ley de dependencia y otras ayudas</description>
        <inlineHelpText>Orientación sobre la ley de dependencia y otras ayudas</inlineHelpText>
        <label>Orientación  ley de dependencia (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Otros_servicios_CD__c</fullName>
        <label>Otros servicios CD</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Otros_servicios_RD__c</fullName>
        <label>Otros servicios RD</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>País</label>
        <picklist>
            <picklistValues>
                <fullName>España</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>U.E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No U.E.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paliativos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paliativos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Parking para las visitas.</inlineHelpText>
        <label>Parking (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parking_gratuito__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parking gratuito para las visitas</description>
        <inlineHelpText>Parking gratuito para las visitas</inlineHelpText>
        <label>Parking gratuito (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peluqueria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peluquería</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peluqueria_profesional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Peluquería profesional en el propio centro con servicio de lavado, corte y marcado.</description>
        <inlineHelpText>Peluquería profesional en el propio centro con servicio de lavado, corte y marcado.</inlineHelpText>
        <label>Peluquería profesional (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pension_completaCD__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Restauración propia elaborada con productos de calidad. Incluye desayuno, comida y merienda.</description>
        <inlineHelpText>Restauración propia elaborada con productos de calidad. Incluye desayuno, comida y merienda.</inlineHelpText>
        <label>Régimen alimenticio Centro de día (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pension_completa__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Restauración propia elaborada con productos de calidad, en régimen de pensión completa que incluye desayuno, comida, merienda y cena.</description>
        <inlineHelpText>Restauración propia elaborada con productos de calidad, en régimen de pensión completa que incluye desayuno, comida, merienda y cena.</inlineHelpText>
        <label>Pensión completa (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perfil__c</fullName>
        <inlineHelpText>Campo obligatorio para residentes</inlineHelpText>
        <label>Perfil</label>
        <picklist>
            <picklistValues>
                <fullName>Autónomo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependiente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personalizar_la_habitacion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Posibilidad de personalizar la habitación.</description>
        <inlineHelpText>Posibilidad de personalizar la habitación.</inlineHelpText>
        <label>Personalizar la habitación (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_personal_CAT_Hoja_1__c</fullName>
        <defaultValue>&quot;015b0000002dUNM&quot;</defaultValue>
        <label>Plan personal CAT Hoja 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_personal_CAT_Hoja_2__c</fullName>
        <defaultValue>&quot;015b0000002dUNL&quot;</defaultValue>
        <label>Plan personal CAT Hoja 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_personal_CAT_Pie_Hoja_1__c</fullName>
        <defaultValue>&quot;01511000000gaPC&quot;</defaultValue>
        <label>Plan personal CAT Pie Hoja 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_personal_ESP_Hoja_1__c</fullName>
        <defaultValue>&quot;01511000000Wt3f&quot;</defaultValue>
        <label>Plan personal ESP Hoja 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_personal_ESP_Hoja_2__c</fullName>
        <defaultValue>&quot;01511000000Wt3k&quot;</defaultValue>
        <label>Plan personal ESP Hoja 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_personal_ESP_Pie_Hoja_1__c</fullName>
        <label>Plan personal ESP Pie Hoja 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Podologia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Podología</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PosivilidadExtenderContratacionServicio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posibilidad de extender la contratación del servicio según necesidades puntuales.</description>
        <inlineHelpText>Posibilidad de extender la contratación del servicio según necesidades puntuales.</inlineHelpText>
        <label>Posibilidad extender contratación (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Precio_HD_Grado_1__c</fullName>
        <label>Precio HD Grado 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_HD_Grado_2__c</fullName>
        <label>Precio HD Grado 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_HD_Grado_3__c</fullName>
        <label>Precio HD Grado 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_HI_Grado_1__c</fullName>
        <label>Precio HI Grado 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_HI_Grado_2__c</fullName>
        <label>Precio HI Grado 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_HI_Grado_3__c</fullName>
        <label>Precio HI Grado 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Suite_Grado_1__c</fullName>
        <label>Precio Suite Grado 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Suite_Grado_2__c</fullName>
        <label>Precio Suite Grado 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Suite_Grado_3__c</fullName>
        <label>Precio Suite Grado 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preferencia_de_envio_de_factura__c</fullName>
        <label>Preferencia de envío de factura</label>
        <picklist>
            <picklistValues>
                <fullName>Recogida en centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correo ordinario</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profesionales_socio_sanitarios__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Profesionales socio-sanitarios al servicio de los familiares</description>
        <inlineHelpText>Profesionales socio-sanitarios al servicio de los familiares</inlineHelpText>
        <label>Profesionales socio-sanitarios (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promociones_del__c</fullName>
        <label>Promociones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <label>Provincia</label>
        <picklist>
            <picklistValues>
                <fullName>A Coruña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Álava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albacete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asturias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ávila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badajoz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bizkaia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burgos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cáceres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cádiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantabria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castelló</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceuta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ciudad Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Córdoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuenca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gipuzkoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadalajara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huelva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huesca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illes Balears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaén</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Rioja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Palmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>León</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Psicologia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Psicología</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Puntuacion__c</fullName>
        <inlineHelpText>Del 1 al 10</inlineHelpText>
        <label>Puntuación</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Razon_Social__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recepcionista__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recepcionista</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Recepcionista</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rehabilitacion_Convalecencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rehabilitación/Convalecencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Respiro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respiro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsable_PlanPersonal__c</fullName>
        <inlineHelpText>En función de este campo, informaremos el responsable en el pie de los Planes Personales</inlineHelpText>
        <label>Responsable Plan Personal</label>
        <picklist>
            <picklistValues>
                <fullName>Director/a SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable de Atención al Cliente SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinador de Centro de Día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinador de Unidad de Estancia Diurna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>